# parley_ratatui

./: Cargo.toml  README.md
examples/: bevy_colors_rgb.rs  bevy_texture.rs  egui_resizable.rs  winit_window.rs
src/: backend.rs  color.rs  lib.rs  renderer.rs  text.rs
