[package]
name = "parley_ratatui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[dependencies]
parley = "0.7.0"
ratatui = { version = "0.29.0", default-features = false }
vello = "0.7.0"

[dev-dependencies]
bevy = { version = "0.18.1", default-features = true }

[[example]]
name = "bevy_texture"
required-features = []
